[project]
name = "repl-nix-artmanagershell"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.0.3",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "openai>=1.52.2",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.36",
    "werkzeug>=3.0.4",
    "pytz>=2025.2",
    "flask-login>=0.6.3",
    "flask-dance>=7.1.0",
    "oauthlib>=3.3.1",
    "pyjwt>=2.10.1",
    "gunicorn>=23.0.0",
]
